# precommit_hook_tutorial

./: .commitlintrc  .coverage  .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  pyproject.toml
SQL/: data.sql
my_app/: run.py
notebooks/: playground copy.ipynb  playground.ipynb
test/: test_main.py
