[tool.poetry]
name = "dummy"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
numpy = "^1.21.0"
scikit-learn = "^1.0"
pandas = "^1.3.0"
python = ">=3.8,<3.12"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
jupyter = "^1.0.0"
notebook = "^6.4.12"
sqlfluff = "^1"
black = "22.8.0"
pre-commit = "^3.2.2"
pytest = "7.1.3"
pytest-cov = "4.0.0"
sphinx = ">=1.0.0,<2.0.0"
mypy = "^0.910"
bandit = "^1.7.0"
isort = "^5.9.3"
pylint = "^2.11.1"
radon = "^4.1.0"
coverage = "^5.5"


[tool.black]
line-length = 88

[tool.flake8]
extend-ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 88

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
